test/should_fail/PropertyAlreadySynthesized.oj

@implementation PropertyAlreadySynthesized

@property id foo;
@synthesize foo=_foo;
@synthesize foo=_bar;

@end
